MiniCompiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> assignment
Rule 5     statement -> if_statement
Rule 6     statement -> for_loop
Rule 7     statement -> while_loop
Rule 8     statement -> print_statement
Rule 9     assignment -> ID ASSIGN expression SEMI
Rule 10    print_statement -> PRINT expression SEMI
Rule 11    if_statement -> IF expression LBRACE statement_list RBRACE
Rule 12    if_statement -> IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 13    for_loop -> FOR ID ASSIGN expression SEMI expression SEMI ID ASSIGN expression LBRACE statement_list RBRACE
Rule 14    while_loop -> WHILE expression LBRACE statement_list RBRACE
Rule 15    expression -> expression PLUS expression
Rule 16    expression -> expression MINUS expression
Rule 17    expression -> expression MUL expression
Rule 18    expression -> expression DIV expression
Rule 19    expression -> expression LT expression
Rule 20    expression -> expression GT expression
Rule 21    expression -> expression LE expression
Rule 22    expression -> expression GE expression
Rule 23    expression -> expression EE expression
Rule 24    expression -> expression NE expression
Rule 25    expression -> expression AND expression
Rule 26    expression -> expression OR expression
Rule 27    expression -> NOT expression
Rule 28    expression -> LPAREN expression RPAREN
Rule 29    expression -> NUMBER
Rule 30    expression -> ID

Terminals, with rules where they appear

AND                  : 25
ASSIGN               : 9 13 13
DIV                  : 18
EE                   : 23
ELSE                 : 12
FOR                  : 13
GE                   : 22
GT                   : 20
ID                   : 9 13 13 30
IF                   : 11 12
LBRACE               : 11 12 12 13 14
LE                   : 21
LPAREN               : 28
LT                   : 19
MINUS                : 16
MUL                  : 17
NE                   : 24
NOT                  : 27
NUMBER               : 29
OR                   : 26
PLUS                 : 15
PRINT                : 10
RBRACE               : 11 12 12 13 14
RPAREN               : 28
SEMI                 : 9 10 13 13
WHILE                : 14
error                : 

Nonterminals, with rules where they appear

assignment           : 4
expression           : 9 10 11 12 13 13 13 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 28
for_loop             : 6
if_statement         : 5
print_statement      : 8
program              : 0
statement            : 2 3
statement_list       : 1 2 11 12 12 13 14
while_loop           : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . assignment
    (5) statement -> . if_statement
    (6) statement -> . for_loop
    (7) statement -> . while_loop
    (8) statement -> . print_statement
    (9) assignment -> . ID ASSIGN expression SEMI
    (11) if_statement -> . IF expression LBRACE statement_list RBRACE
    (12) if_statement -> . IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (13) for_loop -> . FOR ID ASSIGN expression SEMI expression SEMI ID ASSIGN expression LBRACE statement_list RBRACE
    (14) while_loop -> . WHILE expression LBRACE statement_list RBRACE
    (10) print_statement -> . PRINT expression SEMI

    ID              shift and go to state 9
    IF              shift and go to state 10
    FOR             shift and go to state 11
    WHILE           shift and go to state 12
    PRINT           shift and go to state 13

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    if_statement                   shift and go to state 5
    for_loop                       shift and go to state 6
    while_loop                     shift and go to state 7
    print_statement                shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . assignment
    (5) statement -> . if_statement
    (6) statement -> . for_loop
    (7) statement -> . while_loop
    (8) statement -> . print_statement
    (9) assignment -> . ID ASSIGN expression SEMI
    (11) if_statement -> . IF expression LBRACE statement_list RBRACE
    (12) if_statement -> . IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (13) for_loop -> . FOR ID ASSIGN expression SEMI expression SEMI ID ASSIGN expression LBRACE statement_list RBRACE
    (14) while_loop -> . WHILE expression LBRACE statement_list RBRACE
    (10) print_statement -> . PRINT expression SEMI

    $end            reduce using rule 1 (program -> statement_list .)
    ID              shift and go to state 9
    IF              shift and go to state 10
    FOR             shift and go to state 11
    WHILE           shift and go to state 12
    PRINT           shift and go to state 13

    statement                      shift and go to state 14
    assignment                     shift and go to state 4
    if_statement                   shift and go to state 5
    for_loop                       shift and go to state 6
    while_loop                     shift and go to state 7
    print_statement                shift and go to state 8

state 3

    (3) statement_list -> statement .

    ID              reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> assignment .

    ID              reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    WHILE           reduce using rule 4 (statement -> assignment .)
    PRINT           reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    RBRACE          reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> if_statement .

    ID              reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    FOR             reduce using rule 5 (statement -> if_statement .)
    WHILE           reduce using rule 5 (statement -> if_statement .)
    PRINT           reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    RBRACE          reduce using rule 5 (statement -> if_statement .)


state 6

    (6) statement -> for_loop .

    ID              reduce using rule 6 (statement -> for_loop .)
    IF              reduce using rule 6 (statement -> for_loop .)
    FOR             reduce using rule 6 (statement -> for_loop .)
    WHILE           reduce using rule 6 (statement -> for_loop .)
    PRINT           reduce using rule 6 (statement -> for_loop .)
    $end            reduce using rule 6 (statement -> for_loop .)
    RBRACE          reduce using rule 6 (statement -> for_loop .)


state 7

    (7) statement -> while_loop .

    ID              reduce using rule 7 (statement -> while_loop .)
    IF              reduce using rule 7 (statement -> while_loop .)
    FOR             reduce using rule 7 (statement -> while_loop .)
    WHILE           reduce using rule 7 (statement -> while_loop .)
    PRINT           reduce using rule 7 (statement -> while_loop .)
    $end            reduce using rule 7 (statement -> while_loop .)
    RBRACE          reduce using rule 7 (statement -> while_loop .)


state 8

    (8) statement -> print_statement .

    ID              reduce using rule 8 (statement -> print_statement .)
    IF              reduce using rule 8 (statement -> print_statement .)
    FOR             reduce using rule 8 (statement -> print_statement .)
    WHILE           reduce using rule 8 (statement -> print_statement .)
    PRINT           reduce using rule 8 (statement -> print_statement .)
    $end            reduce using rule 8 (statement -> print_statement .)
    RBRACE          reduce using rule 8 (statement -> print_statement .)


state 9

    (9) assignment -> ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 15


state 10

    (11) if_statement -> IF . expression LBRACE statement_list RBRACE
    (12) if_statement -> IF . expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 16

state 11

    (13) for_loop -> FOR . ID ASSIGN expression SEMI expression SEMI ID ASSIGN expression LBRACE statement_list RBRACE

    ID              shift and go to state 21


state 12

    (14) while_loop -> WHILE . expression LBRACE statement_list RBRACE
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 22

state 13

    (10) print_statement -> PRINT . expression SEMI
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 23

state 14

    (2) statement_list -> statement_list statement .

    ID              reduce using rule 2 (statement_list -> statement_list statement .)
    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    FOR             reduce using rule 2 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 2 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement_list statement .)


state 15

    (9) assignment -> ID ASSIGN . expression SEMI
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 24

state 16

    (11) if_statement -> IF expression . LBRACE statement_list RBRACE
    (12) if_statement -> IF expression . LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . MUL expression
    (18) expression -> expression . DIV expression
    (19) expression -> expression . LT expression
    (20) expression -> expression . GT expression
    (21) expression -> expression . LE expression
    (22) expression -> expression . GE expression
    (23) expression -> expression . EE expression
    (24) expression -> expression . NE expression
    (25) expression -> expression . AND expression
    (26) expression -> expression . OR expression

    LBRACE          shift and go to state 25
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    MUL             shift and go to state 28
    DIV             shift and go to state 29
    LT              shift and go to state 30
    GT              shift and go to state 31
    LE              shift and go to state 32
    GE              shift and go to state 33
    EE              shift and go to state 34
    NE              shift and go to state 35
    AND             shift and go to state 36
    OR              shift and go to state 37


state 17

    (27) expression -> NOT . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 38

state 18

    (28) expression -> LPAREN . expression RPAREN
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 39

state 19

    (29) expression -> NUMBER .

    LBRACE          reduce using rule 29 (expression -> NUMBER .)
    PLUS            reduce using rule 29 (expression -> NUMBER .)
    MINUS           reduce using rule 29 (expression -> NUMBER .)
    MUL             reduce using rule 29 (expression -> NUMBER .)
    DIV             reduce using rule 29 (expression -> NUMBER .)
    LT              reduce using rule 29 (expression -> NUMBER .)
    GT              reduce using rule 29 (expression -> NUMBER .)
    LE              reduce using rule 29 (expression -> NUMBER .)
    GE              reduce using rule 29 (expression -> NUMBER .)
    EE              reduce using rule 29 (expression -> NUMBER .)
    NE              reduce using rule 29 (expression -> NUMBER .)
    AND             reduce using rule 29 (expression -> NUMBER .)
    OR              reduce using rule 29 (expression -> NUMBER .)
    SEMI            reduce using rule 29 (expression -> NUMBER .)
    RPAREN          reduce using rule 29 (expression -> NUMBER .)


state 20

    (30) expression -> ID .

    LBRACE          reduce using rule 30 (expression -> ID .)
    PLUS            reduce using rule 30 (expression -> ID .)
    MINUS           reduce using rule 30 (expression -> ID .)
    MUL             reduce using rule 30 (expression -> ID .)
    DIV             reduce using rule 30 (expression -> ID .)
    LT              reduce using rule 30 (expression -> ID .)
    GT              reduce using rule 30 (expression -> ID .)
    LE              reduce using rule 30 (expression -> ID .)
    GE              reduce using rule 30 (expression -> ID .)
    EE              reduce using rule 30 (expression -> ID .)
    NE              reduce using rule 30 (expression -> ID .)
    AND             reduce using rule 30 (expression -> ID .)
    OR              reduce using rule 30 (expression -> ID .)
    SEMI            reduce using rule 30 (expression -> ID .)
    RPAREN          reduce using rule 30 (expression -> ID .)


state 21

    (13) for_loop -> FOR ID . ASSIGN expression SEMI expression SEMI ID ASSIGN expression LBRACE statement_list RBRACE

    ASSIGN          shift and go to state 40


state 22

    (14) while_loop -> WHILE expression . LBRACE statement_list RBRACE
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . MUL expression
    (18) expression -> expression . DIV expression
    (19) expression -> expression . LT expression
    (20) expression -> expression . GT expression
    (21) expression -> expression . LE expression
    (22) expression -> expression . GE expression
    (23) expression -> expression . EE expression
    (24) expression -> expression . NE expression
    (25) expression -> expression . AND expression
    (26) expression -> expression . OR expression

    LBRACE          shift and go to state 41
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    MUL             shift and go to state 28
    DIV             shift and go to state 29
    LT              shift and go to state 30
    GT              shift and go to state 31
    LE              shift and go to state 32
    GE              shift and go to state 33
    EE              shift and go to state 34
    NE              shift and go to state 35
    AND             shift and go to state 36
    OR              shift and go to state 37


state 23

    (10) print_statement -> PRINT expression . SEMI
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . MUL expression
    (18) expression -> expression . DIV expression
    (19) expression -> expression . LT expression
    (20) expression -> expression . GT expression
    (21) expression -> expression . LE expression
    (22) expression -> expression . GE expression
    (23) expression -> expression . EE expression
    (24) expression -> expression . NE expression
    (25) expression -> expression . AND expression
    (26) expression -> expression . OR expression

    SEMI            shift and go to state 42
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    MUL             shift and go to state 28
    DIV             shift and go to state 29
    LT              shift and go to state 30
    GT              shift and go to state 31
    LE              shift and go to state 32
    GE              shift and go to state 33
    EE              shift and go to state 34
    NE              shift and go to state 35
    AND             shift and go to state 36
    OR              shift and go to state 37


state 24

    (9) assignment -> ID ASSIGN expression . SEMI
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . MUL expression
    (18) expression -> expression . DIV expression
    (19) expression -> expression . LT expression
    (20) expression -> expression . GT expression
    (21) expression -> expression . LE expression
    (22) expression -> expression . GE expression
    (23) expression -> expression . EE expression
    (24) expression -> expression . NE expression
    (25) expression -> expression . AND expression
    (26) expression -> expression . OR expression

    SEMI            shift and go to state 43
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    MUL             shift and go to state 28
    DIV             shift and go to state 29
    LT              shift and go to state 30
    GT              shift and go to state 31
    LE              shift and go to state 32
    GE              shift and go to state 33
    EE              shift and go to state 34
    NE              shift and go to state 35
    AND             shift and go to state 36
    OR              shift and go to state 37


state 25

    (11) if_statement -> IF expression LBRACE . statement_list RBRACE
    (12) if_statement -> IF expression LBRACE . statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . assignment
    (5) statement -> . if_statement
    (6) statement -> . for_loop
    (7) statement -> . while_loop
    (8) statement -> . print_statement
    (9) assignment -> . ID ASSIGN expression SEMI
    (11) if_statement -> . IF expression LBRACE statement_list RBRACE
    (12) if_statement -> . IF expression LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (13) for_loop -> . FOR ID ASSIGN expression SEMI expression SEMI ID ASSIGN expression LBRACE statement_list RBRACE
    (14) while_loop -> . WHILE expression LBRACE statement_list RBRACE
    (10) print_statement -> . PRINT expression SEMI

    ID              shift and go to state 9
    IF              shift and go to state 10
    FOR             shift and go to state 11
    WHILE           shift and go to state 12
    PRINT           shift and go to state 13

    statement_list                 shift and go to state 44
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    if_statement                   shift and go to state 5
    for_loop                       shift and go to state 6
    while_loop                     shift and go to state 7
    print_statement                shift and go to state 8

state 26

    (15) expression -> expression PLUS . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 45

state 27

    (16) expression -> expression MINUS . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 46

state 28

    (17) expression -> expression MUL . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 47

state 29

    (18) expression -> expression DIV . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 48

state 30

    (19) expression -> expression LT . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 49

state 31

    (20) expression -> expression GT . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 50

state 32

    (21) expression -> expression LE . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 51

state 33

    (22) expression -> expression GE . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 52

state 34

    (23) expression -> expression EE . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 53

state 35

    (24) expression -> expression NE . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 54

state 36

    (25) expression -> expression AND . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 55

state 37

    (26) expression -> expression OR . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression MUL expression
    (18) expression -> . expression DIV expression
    (19) expression -> . expression LT expression
    (20) expression -> . expression GT expression
    (21) expression -> . expression LE expression
    (22) expression -> . expression GE expression
    (23) expression -> . expression EE expression
    (24) expression -> . expression NE expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . NOT expression
    (28) expression -> . LPAREN expression RPAREN
    (29) expression -> . NUMBER
    (30) expression -> . ID

    NOT             shift and go to state 17
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 19
    ID              shift and go to state 20

    expression                     shift and go to state 56

state 38

    (27) expression -> NOT expression .
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . MUL expression
    (18) expression -> expression . DIV expression
    (19) expression -> expression . LT expression
    (20) expression -> expression . GT expression
